add all existing medium blogs with limit query for api (#74)
