# integrations-dotnet-api/src/Application/BlogPreviews/Queries/GetAllBlogPreviews/BlogPreviewDto.cs
@@ -10,5 +10,6 @@ public class BlogPreviewDto : IMapFrom<BlogPost>
     public string Content { get; set; } = string.Empty;
     public string Image { get; set; } = string.Empty;
     public string Url { get; set; } = string.Empty;
+    public DateTimeOffset PublishedDate { get; set; }
 
 }
